Cambiada la clase 21 para incluir lo de la clase 23 (Base de Datos)
AMB con Base de Datos y utilización basica de DataTables.

--- a/ppt/BaseDeDatos.2016/AccesoDatos/app.config
+++ b/ppt/BaseDeDatos.2016/AccesoDatos/app.config
@@ -3,8 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="EjerClase21_Library.Properties.Settings.conexion"
-            connectionString="Data Source=LAB5PC25\SQLEXPRESS;Initial Catalog=Padron;Integrated Security=True"
+        <add name="AccesoDatos.Properties.Settings.CadenaConexion" connectionString="Data Source=.;Initial Catalog=Padron;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
