--- a/Segado.Emilio_Parte4/EjerClase24_Delegados_ClassLibrary/EjerClase24_Delegados_ClassLibrary.csproj
+++ b/Segado.Emilio_Parte4/EjerClase24_Delegados_ClassLibrary/EjerClase24_Delegados_ClassLibrary.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AD88E26C-EB25-4876-8F53-6CD6C03D9133}</ProjectGuid>
+    <ProjectGuid>{5677E6E4-9186-411A-9688-78EAAC3ABDA9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EjerClase23_Eventos_Calculadora_ClassLibrary</RootNamespace>
-    <AssemblyName>EjerClase23_Eventos_Calculadora_ClassLibrary</AssemblyName>
+    <RootNamespace>EjerClase24_Delegados_ClassLibrary</RootNamespace>
+    <AssemblyName>EjerClase24_Delegados_ClassLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,12 +36,20 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Empleado.cs" />
+    <Compile Include="EmpleadoEventArgs.cs" />
+    <Compile Include="SueldoNegativoException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
